2002-12-27 garlick
    * Clean up passing of errors to client action completion callback.
    * Make all informational message names CP_INFO_*.  Delete some unused
      protocol responses.
    * Disable calling of err() function in hostlist.c.

2002-12-26 garlick
    * Beginnings of redundant power supply support.
    * Increase CP_LINEMAX to accomodate longer lines returned by --telemetry
    * Return powerman version in banner string and warn if version mismatch
      between server and client.
    * Add --exprange option to select one-line-per-node query responses
    * Added README

2002-12-25 garlick
    * Baytech cycle script based on 'reboot' is a no-op if plug is off.  
      Do an explicit off then on instead.  Reduce timeout from 20 to 10s.

2002-12-24 garlick
    * Fix POWERMAN_VERSION string to include %{release} when building
      with make rpm tag=HEAD.
    * Added --telemetry option for device telemetry

2002-12-23 garlick
    * Added -D,--device [targets] command for getting status of RPC
      controlling [targets]. 
    * Suppress 'Query complete' message in client.
    * Sort hostlists before returning to client.

2002-12-22 garlick
    * Updated list.[ch] and cbuf.[ch] to latest lsd-tools versions.

2002-12-20 garlick
    * Added powerman/powermand --version option.

2002-11-21 garlick
    * Fixed etc/icebox3.dev to handle flashing multiple beacons.

2002-11-12 garlick
    * Added etc/apc.dev for APC MasterSwitch

2002-11-09 garlick
    * Updated list.[ch], hostlist.[ch], and cbuf.[ch] from lsd-tools.
    * Renamed config.[ch] to parse_util.[ch] and created config.h.
    * Tagged powerman-1-0-15

2002-11-04 garlick
    * Switched over to Chris Dunlap's circular buffer module.
    * Update list.[ch] and cbuf.[ch] from lsd-tools.

2002-10-28 garlick
    * Minor cosmetic cleanup of data structures

2002-10-27 garlick
    * Added client options -d host[:port] (use alt server/port), 
      -L (display license).  
    * Cleaned up server options.