@@ -6,23 +6,14 @@
 #define DBG_SELECT          0x0002
 #define DBG_CLIENT          0x0004
 #define DBG_ACTION          0x0008
-#define DBG_BUFFER          0x0010
-#define DBG_DEV_TELEMETRY   0x0020
-#define DBG_CLI_TELEMETRY   0x0040
-#define DBG_SCRIPT          0x0080
 #define DBG_MEMORY          0x0100
 
 #define DBG_NAME_TAB {                      \
     { DBG_DEVICE,       "device" },         \
     { DBG_SELECT,       "select" },         \
     { DBG_CLIENT,       "client" },         \
-    { DBG_BUFFER,       "buffer" },         \
-    { DBG_SCRIPT,       "script" },         \
-    { DBG_DEV_TELEMETRY,"dev_telemetry" },  \
-    { DBG_CLI_TELEMETRY,"cli_telemetry" },  \
-    { DBG_SCRIPT,       "script" },         \
-    { DBG_MEMORY,       "memory" },         \
     { DBG_ACTION,       "action" },         \
+    { DBG_MEMORY,       "memory" },         \
     { 0, NULL }                             \
     }
 
