@@ -1,3 +1,6 @@
+2002-12-30 garlick
+    * More refinement of device error handling.
+
 2002-12-27 garlick
     * Clean up passing of errors to client action completion callback.
     * Make all informational message names CP_INFO_*.  Delete some unused
